# DictConfigHandler

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dictconfig_handler/: __init__.py  handler.py
tests/: test.py
