[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictconfig-handler"
version = "0.1.0"
description = "Utility for handling OmegaConf DictConfig and building dataclasses from config sections."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "omegaconf",
    "dataclass-initializer @ git+https://github.com/ry-yoshida-private/DataclassInitializer.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dictconfig_handler"]

[tool.hatch.build.targets.wheel.force-include]
"src/dictconfig_handler/py.typed" = "dictconfig_handler/py.typed"
